# oekaki

./: .gitignore  README.md  example.py  mpl.py  setup.cfg
.github/ISSUE_TEMPLATE/: config.yml
examples/: lazy.py  mosaic.ipynb  mosaic.py  mosaic_lazy.py  readme.py  validation.py  validation_for_mpl.py
mont3/: __init__.py  lazy.py  mpl_wrapper.py  validation.py
oekaki/: __init__.py  lazy.py  validation.py
tests/: __init__.py  test_lazy.py  utils.py
