[metadata]
name = oekaki
version = 0.1.0
url = https://github.com/yuji96/oekaki
author = Yuji Yamamoto
description = Lazy on demand subplots.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python :: 3

[options]
install_requires =
  matplotlib
  plum-dispatch
packages = find:

[options.extras_require]
dev =
  pytest
ja = 
  japanize-matplotlib
